# Fly-in

./: .flake8  .gitignore  Makefile  README.md  graphs.py  main.py  parser.py  path_finding.py  pyproject.toml  test.txt  visualization.py
maps/challenger/: 01_the_impossible_dream.txt
maps/easy/: 01_linear_path.txt
